# kursavaya

./: main.py  pyproject.toml
src/: files_working.py  hhapi.py  vacancys.py
tests/: tests.py
